# glaurung-models

./: README.md
binary-embedding/: .gitignore  README.md  find_latest_checkpoint.sh  pyproject.toml  run.sh  run_resume.sh
binary-embedding/binary-tokenizer-005/: train.sh
binary-embedding/src/binary_embedding/: __init__.py  assessment.py  cli.py  data.py  losses.py  metrics.py  models.py  pair_data.py  schedulers.py  tokenizer.py  training.py
binary-sample/: .gitignore  README.md  extraction_config.json  pyproject.toml
binary-sample/binary_extractor/: __init__.py  config.py  docker_manager.py  extractor.py  file_manager.py  main.py
binary-sample/scripts/: analyze-binaries.sh  explore-arm-containers.sh  extract-arm-binaries-fixed.sh  extract-binaries.sh  run-collection.sh  simple-test-analysis.sh  test-single-extraction.sh
docs/datasets/: ideas-001.md  ideas-002.md  ideas-003.md
tokenizers/tokenizer-001/: .gitignore  PLAN.md
tokenizers/tokenizer-001/bbpe/: Cargo.toml
tokenizers/tokenizer-001/bbpe/src/: cli.rs  ingest.rs  lib.rs  mapping.rs  post.rs  train.rs  util.rs
tokenizers/tokenizer-001/tokenizers/binary-tokenizer-01/iteration-001/: tokenizer.json
tokenizers/tokenizer-001/tokenizers/binary-tokenizer-01/iteration-002/: train.sh  train.sh~
tokenizers/tokenizer-001/tokenizers/binary-tokenizer-01/iteration-003/: tokenizer.json  train.sh
tokenizers/tokenizer-001/tokenizers/binary-tokenizer-01/iteration-004/: tokenizer.json  train.sh
